# ChangeLog for dev-python/acutil
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*acutil-6.1.11 ( 6 Oct 2010 )

  16 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.11.ebuild:
  bump

*acutil-6.1.10 (04 Oct 2010)

  04 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.10.ebuild:
  bump

  19 Jul 2010; <slep@gentoo.org> -acutil-5.4.14.ebuild,
  -acutil-6.1.1.ebuild, acutil-6.1.6.ebuild:
  fix eclass deprecations warning

  19 Jul 2010; <slep@gentoo.org> -acutil-5.4.14.ebuild,
  -acutil-6.1.1.ebuild:
  remove outdated eduild

*acutil-6.1.6

  07 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.6.ebuild:
  bump

  27 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.1.ebuild:
  version bump

*acutil-6.1.1 ( 27 Mar 2010 )

  02 Feb 2010; <slep@gentoo.org> -acutil-5.4.12.ebuild,
  acutil-5.4.14.ebuild:
  fix QA using python eclass

  12 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-5.4.14.ebuild:
  add acutil-5.4.14.ebuild

  21 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-5.4.12.ebuild:
  version bump

  29 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/5.4.10-Makefile.patch, +acutil-5.4.10.ebuild, +metadata.xml:
  initial commit
