@@ -1,8 +1,4 @@
-DIST authconfig-6.1.10.tar.bz2 622900 RMD160 00202ef250aafe41a52ad9924d0f908e3873a935 SHA1 9771b9a10163ce43c03515a86add14cfec2bda16 SHA256 f630985cedcaaed633f383536a5da6fffc1e98963775562f92b41fb9f4f48869
 DIST authconfig-6.1.11.tar.bz2 623602 RMD160 40f0378553b2db5d1a9143339e3c7a54ebf84360 SHA1 7c0ebdf119311d5d2ca57a748b0b84594ca888bb SHA256 fb9f40a1f2928e8420f2e1c6a6f6974a0c02560df76a891fbb7dccc0e49d53d4
-DIST authconfig-6.1.6.tar.bz2 616620 RMD160 43710c8efe9c1d79201ffc38f18a477d5d8ff2e6 SHA1 c7eb742293ec38097dbc85be4def06911a4b1287 SHA256 77e596e95190682c0a68c0da8e300d63a2398132b567482bb7e600af3965d129
-EBUILD acutil-6.1.10.ebuild 813 RMD160 8c1d732d4f5bdffc6ceb1abf0a71f32e0809470e SHA1 cac254c24e9dcd7bd65e7e852b952736d8a3274d SHA256 5743c3033cb396b56666ec63c4c7c75f153bf3dcab067168910e96188e90c74d
 EBUILD acutil-6.1.11.ebuild 830 RMD160 2686908733dfa56da52621081708b5119dabfbce SHA1 439082fa85b8b4acf8017e8c9daf666c22ae74d6 SHA256 395c4135ca36f528ba25bc79ae364967002e610c9f053b8003eb1bfbfc01c897
-EBUILD acutil-6.1.6.ebuild 813 RMD160 8c1d732d4f5bdffc6ceb1abf0a71f32e0809470e SHA1 cac254c24e9dcd7bd65e7e852b952736d8a3274d SHA256 5743c3033cb396b56666ec63c4c7c75f153bf3dcab067168910e96188e90c74d
-MISC ChangeLog 1256 RMD160 aa8a51c59a7e507fc34a726ae46588f4106c32b0 SHA1 c3a98b0c2fc8d8e839b7254d4142deb82eac7b9f SHA256 91453a6d940325eb00cc1df965bc5d723bc1b946c6eb34b9c41bb999bfc7dec3
+MISC ChangeLog 1368 RMD160 05d8298f9531070ede9570bfcc12c7af3159c3e7 SHA1 1a44bad556748783e29c0aada47fa9823d5c748a SHA256 431ca22a701e2c72ce8dfa2e99856b39499760a1b912ca51889d32f75e42bb96
 MISC metadata.xml 709 RMD160 26d2fa4257f021f5731b158f37ce28e1558d97e2 SHA1 8d40ff3611414c8477e6729deed970e8be348be7 SHA256 9924673180a21100ca72a07d64b77735785d22160e1811dc32297a7b07abca8b
